components/policies/pod-security-standards/baseline/ban-selinux-user/test/job-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob01
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
      securityContext:
        seLinuxOptions:
          user: sysadm_u
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob02
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              user: sysadm_u
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob03
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
        - name: container02
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              user: sysadm_u
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob04
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              type: unconfined_t
        - name: container02
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              user: sysadm_u
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob05
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              user: sysadm_u
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob06
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer02
          image: dummyimagename
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              user: sysadm_u
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob07
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer02
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              type: container_init_t
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              user: sysadm_u
      containers:
        - name: container01
          image: dummyimagename
---
