components/policies/pod-security-standards/baseline/ban-selinux-user/test/pod-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    seLinuxOptions:
      user: sysadm_u
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          user: sysadm_u
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
    - name: container01
      image: dummyimagename
    - name: container02
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          user: sysadm_u
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          user: sysadm_u
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  initContainers:
    - name: initcontainer02
      image: dummyimagename
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          user: sysadm_u
  containers:
    - name: container01
      image: dummyimagename
---
