components/policies/pod-security-standards/baseline/ban-selinux-user/test/pod-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    seLinuxOptions:
      level: "s0:c123,c456"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          level: "s0:c123,c456"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_t
          level: "s0:c123,c456"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  containers:
    - name: container01
      image: dummyimagename
    - name: container02
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          level: "s0:c123,c456"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_t
    - name: container02
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          level: "s0:c123,c456"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod08
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          level: "s0:c123,c456"
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod09
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          level: "s0:c123,c456"
          type: container_t
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod10
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
    - name: initcontainer02
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          level: "s0:c123,c456"
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod11
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_t
    - name: initcontainer02
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          level: "s0:c123,c456"
  containers:
    - name: container01
      image: dummyimagename
---
